// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IconButton rendering renders the expected elements 1`] = `
<button
  aria-label="Test"
  className="IconButton IconButton--medium IconButton--ghost TestClass"
  id="test"
  type="button"
>
  <SvgIcon
    icon={{}}
  />
</button>
`;

exports[`IconButton rendering renders the expected elements if disabled is true 1`] = `
<span
  aria-disabled="true"
  aria-label="Test"
  className="IconButton IconButton--medium IconButton--ghost"
  id="test"
  role="button"
>
  <SvgIcon
    icon={{}}
  />
</span>
`;

exports[`IconButton rendering renders the expected elements if disabled is true and className is set 1`] = `
<span
  aria-disabled="true"
  aria-label="Test"
  className="IconButton IconButton--medium IconButton--ghost TestClass"
  id="test"
  role="button"
>
  <SvgIcon
    icon={{}}
  />
</span>
`;

exports[`IconButton rendering renders the expected elements when className is not set 1`] = `
<button
  aria-label="Test"
  className="IconButton IconButton--medium IconButton--ghost"
  id="test"
  type="button"
>
  <SvgIcon
    icon={{}}
  />
</button>
`;

exports[`IconButton rendering renders the expected elements when overlay is set 1`] = `
<button
  aria-label="Test"
  className="IconButton IconButton--medium IconButton--ghost IconButton--container TestClass"
  id="test"
  type="button"
>
  <SvgIcon
    icon={{}}
  />
  overlay
</button>
`;

exports[`IconButton rendering renders the expected elements when size and tooltipPlacement are set 1`] = `
<button
  aria-label="Test"
  className="IconButton IconButton--large IconButton--ghost"
  id="test"
  type="button"
>
  <SvgIcon
    icon={{}}
  />
</button>
`;

exports[`IconButton rendering renders the expected elements when tooltipText is not set 1`] = `
<button
  aria-label="Test"
  className="IconButton IconButton--medium IconButton--ghost TestClass"
  id="test"
  type="button"
>
  <SvgIcon
    icon={{}}
  />
</button>
`;
